--- a/src/components/pos/pos.component.html
+++ b/src/components/pos/pos.component.html
@@ -119,7 +119,7 @@
               }
 
               <div class="flex flex-col items-center justify-center text-center flex-1">
-                <span class="text-2xl leading-tight">{{ table.number }}</span>
+                <span class="text-xl md:text-2xl leading-tight">{{ table.number }}</span>
                 
                 @if (table.status === 'OCUPADA') {
                     @let status = getProductionStatusForTable(table.number);
