--- a/src/components/pos/order-panel/order-panel.component.html
+++ b/src/components/pos/order-panel/order-panel.component.html
@@ -14,7 +14,7 @@
       <div class="flex-1 flex flex-col md:flex-row min-h-0">
           @if (currentOrder()) {
             <!-- Left Side: Menu -->
-            <div class="w-full md:w-3/5 lg:w-2/3 flex flex-col p-4 overflow-y-auto space-y-4 h-1/2 md:h-full">
+            <div class="w-full md:w-3/5 lg:w-2/3 flex flex-col p-4 overflow-y-auto space-y-4 flex-1 md:flex-initial">
               <!-- Search & Categories -->
               <div>
                 <div class="relative mb-2">
@@ -64,7 +64,7 @@
             </div>
 
             <!-- Right Side: Cart -->
-            <div class="w-full md:w-2/5 lg:w-1/3 flex flex-col bg-gray-900/50 p-4 border-t md:border-t-0 md:border-l border-gray-700 h-1/2 md:h-full">
+            <div class="w-full md:w-2/5 lg:w-1/3 flex flex-col bg-gray-900/50 p-4 border-t md:border-t-0 md:border-l border-gray-700 flex-1 md:flex-initial">
               <div class="flex-1 overflow-y-auto -mr-2 pr-2">
                 <h3 class="font-semibold text-white mb-2">Resumo do Pedido</h3>
                 @if (groupedOrderItems().length === 0 && shoppingCart().length === 0) {
