--- a/src/components/pos/pos.component.html
+++ b/src/components/pos/pos.component.html
@@ -99,7 +99,7 @@
             <div 
               (click)="selectTable(table)"
               (mousedown)="startDrag($event, table, 'move')"
-              class="absolute flex flex-col items-center justify-center text-white font-bold rounded-md border-2 p-1"
+              class="absolute flex flex-col items-center justify-center text-white font-bold rounded-md border-2 p-1 overflow-hidden"
               [class.cursor-pointer]="!isEditMode()"
               [class.cursor-move]="isEditMode()"
               [class.ring-2]="isEditMode()"
@@ -119,7 +119,7 @@
               }
 
               <div class="flex flex-col items-center justify-center text-center flex-1">
-                <span class="text-xl md:text-2xl leading-tight">{{ table.number }}</span>
+                <span class="text-lg md:text-2xl leading-tight">{{ table.number }}</span>
                 
                 @if (table.status === 'OCUPADA') {
                     @let status = getProductionStatusForTable(table.number);
