--- a/src/components/pos/pos.component.html
+++ b/src/components/pos/pos.component.html
@@ -1,5 +1,4 @@
 
-
 @if (isEmployeeLoginModalOpen()) {
   <div class="fixed inset-0 bg-gray-900 z-50 flex items-center justify-center p-4">
     <div class="bg-gray-800 rounded-lg shadow-xl w-full max-w-4xl p-6 border border-gray-700">
@@ -119,7 +118,7 @@
               }
 
               <div class="flex flex-col items-center justify-center text-center flex-1 w-full overflow-hidden">
-                <span class="text-xl sm:text-2xl md:text-3xl font-bold leading-none">{{ table.number }}</span>
+                <span class="text-lg sm:text-2xl md:text-3xl font-bold leading-none">{{ table.number }}</span>
                 
                 @if (table.status === 'OCUPADA') {
                     @if(table.employee_id) {
