--- a/src/components/pos/order-panel/order-panel.component.html
+++ b/src/components/pos/order-panel/order-panel.component.html
@@ -11,10 +11,10 @@
       </div>
 
       <!-- Main Content -->
-      <div class="flex-1 flex flex-col md:flex-row min-h-0">
+      <div class="flex-1 flex flex-col md:flex-row min-h-0 overflow-hidden">
           @if (currentOrder()) {
             <!-- Left Side: Menu -->
-            <div class="w-full md:w-3/5 lg:w-2/3 flex flex-col p-4 flex-1 min-h-0">
+            <div class="w-full md:w-3/5 lg:w-2/3 flex flex-col p-4 h-1/2 md:h-auto border-b md:border-b-0 md:border-r border-gray-700">
               <!-- Search & Categories -->
               <div class="flex-shrink-0">
                 <div class="relative mb-2">
@@ -66,7 +66,7 @@
             </div>
 
             <!-- Right Side: Cart -->
-            <div class="w-full md:w-2/5 lg:w-1/3 flex flex-col bg-gray-900/50 p-4 border-t md:border-t-0 md:border-l border-gray-700 flex-1 min-h-0">
+            <div class="w-full md:w-2/5 lg:w-1/3 flex flex-col bg-gray-900/50 p-4 h-1/2 md:h-auto">
               <h3 class="font-semibold text-white mb-2 flex-shrink-0">Resumo do Pedido</h3>
               <div class="flex-1 overflow-y-auto -mr-4 pr-4">
                   @if (groupedOrderItems().length === 0 && shoppingCart().length === 0) {
